--- a/config/config.json
+++ b/config/config.json
@@ -4,8 +4,7 @@
     "password": "root",
     "database": "appsignal_graphql_db",
     "host": "127.0.0.1",
-    "dialect": "postgres",
-    "operatorsAliases": false
+    "dialect": "postgres"
   },
   "test": {
     "username": "root",
